--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "dateformat": "^4.5.1",
+    "express": "^4.17.1",
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,6 @@
   "bugs": {
     "url": "https://github.com/Dandifiedmiina/guestbook/issues"
   },
-  "homepage": "https://github.com/Dandifiedmiina/guestbook#readme"
+  "homepage": "https://github.com/Dandifiedmiina/guestbook#readme",
+  "devDependencies": {}
 }
