--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dateformat": "^4.5.1",
-    "express": "^4.17.1",
+    "express": "^4.17.1"
   },
   "repository": {
     "type": "git",
